--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -52,6 +52,7 @@ h1 {
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
+    cursor: pointer;
 }
 
 .item__heading {
@@ -69,4 +70,9 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+}
+
+.item__input {
+    display: none;
 }
