--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -15,10 +15,9 @@ body {
     padding-top: 2%;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 1rem;
     align-items: center;
-    background-color: #cecfd0;
-    color: #000000;
+    background-color: #b7d5f5;
     font-family: sans-serif;
 }
 
@@ -30,21 +29,30 @@ h1 {
 }
 
 .accordion {
+    margin: 0 auto;
     width: 85vw;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 1.5rem;
+}
+
+.item__input {
+    display: none;
 }
 
 .item {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     width: 100%;
     min-width: 250px;
     background-color: #eeeeee;
-    padding: 10px 15px;
+    padding: 1rem 1.5rem;
     list-style: none;
-    border-radius: 10px;
-    margin: 1px;
+    border-radius: 1rem;
+    box-shadow:  .3rem .3rem .5rem -.1rem rgba(0,0,0, .2), -.3rem -.3rem .5rem -.1rem rgba(255,255,255, .2);
 }
 
 .item__label {
@@ -60,8 +68,9 @@ h1 {
 }
 
 .item__icon {
-    font-size: 2rem;
+    font-size: 3rem;
     margin-right: 1rem;
+    transition: all .4s linear;
     transform: rotateZ(90deg);
 }
 
@@ -73,6 +82,29 @@ h1 {
     cursor: pointer;
 }
 
-.item__input {
-    display: none;
+.item__content > img {
+    padding: 1rem;
+    border-radius: 2rem;
 }
+
+.item__content {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height .4s linear;
+}
+
+.item__input:checked ~ .item__content {
+    max-height: 25rem;
+}
+
+.item__input:checked ~ .item__label > .item__icon {
+    transform: rotateZ(270deg);
+}
+
+/*.item__content:hover{*/
+/*    max-height: 250px;*/
+/*}*/
+
+/*.item__input:hover + .item__content {*/
+/*    max-height: 250px;*/
+/*}*/
