--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -1,5 +1,3 @@
-/*&#10006;*/
-
 :root {
     font-size: 10px;
 }
@@ -25,7 +23,7 @@ h1 {
     font-weight: bolder;
     letter-spacing: 0;
     font-size: 4rem;
-    color: #bc6a62;
+    color: #FFFFFF;
 }
 
 .accordion {
@@ -36,6 +34,22 @@ h1 {
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
+}
+
+.accordion > li > label > span {
+    transition: all .4s linear;
+}
+
+.accordion:hover > li > input:checked ~ .item__label > .item__icon, .accordion:hover > li > input:checked ~ .item__label > .item__heading{
+    color: #000000;
+}
+
+.accordion > li > label > .item__icon {
+    opacity: 0;
+}
+
+.accordion:hover > li > label > .item__icon {
+    opacity: 1;
 }
 
 .item__input {
@@ -99,12 +113,9 @@ h1 {
 
 .item__input:checked ~ .item__label > .item__icon {
     transform: rotateZ(270deg);
+    color: #1a94ea;
 }
 
-/*.item__content:hover{*/
-/*    max-height: 250px;*/
-/*}*/
-
-/*.item__input:hover + .item__content {*/
-/*    max-height: 250px;*/
-/*}*/
+.item__input:checked ~ .item__label > .item__heading {
+    color: #1a94ea;
+}
