--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -1,5 +1,7 @@
 :root {
     font-size: 10px;
+    --bg-color: #b7d5f5;
+    --item-bg-color: #9cbbda;
 }
 
 * {
@@ -15,7 +17,7 @@ body {
     flex-direction: column;
     gap: 1rem;
     align-items: center;
-    background-color: #b7d5f5;
+    background-color: var(--bg-color);
     font-family: sans-serif;
 }
 
@@ -33,23 +35,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1.5rem;
-}
-
-.accordion > li > label > span {
-    transition: all .4s linear;
-}
-
-.accordion:hover > li > input:checked ~ .item__label > .item__icon, .accordion:hover > li > input:checked ~ .item__label > .item__heading{
-    color: #000000;
-}
-
-.accordion > li > label > .item__icon {
-    opacity: 0;
-}
-
-.accordion:hover > li > label > .item__icon {
-    opacity: 1;
+    gap: 1rem;
 }
 
 .item__input {
@@ -61,30 +47,39 @@ h1 {
     flex-direction: column;
     width: 100%;
     min-width: 250px;
-    background-color: #eeeeee;
-    padding: 1rem 1.5rem;
+    background-color: var(--item-bg-color);
     list-style: none;
-    border-radius: 1rem;
-    box-shadow:  .3rem .3rem .5rem -.1rem rgba(0,0,0, .2), -.3rem -.3rem .5rem -.1rem rgba(255,255,255, .2);
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px 0 rgba(0,0,0, .2), -3px -3px 5px 1px rgba(255, 255, 255, .2);
 }
 
 .item__label {
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+    flex-direction: column;
     cursor: pointer;
+}
+
+.item__info {
+    padding: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .item__heading {
     font-size: 2.5rem;
+    display: block;
+    transition: all .4s linear;
+    font-weight: bolder;
+    font-family: sans-serif;
+    color: #1b3fef;
 }
 
 .item__icon {
-    font-size: 3rem;
-    margin-right: 1rem;
+    opacity: 0;
+    width: 15px;
+    height: 15px;
     transition: all .4s linear;
-    transform: rotateZ(90deg);
 }
 
 .item__content {
@@ -93,36 +88,44 @@ h1 {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+
+    max-height: 0;
+    overflow: hidden;
+    transition: all .4s linear;
 }
 
 .item__content > img {
-    padding: 1rem;
-    border-radius: 2rem;
+    display: block;
+    margin-bottom: 5rem;
 }
 
-.item__content {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height .4s linear;
-}
-
+/* CHECKED */
 .item__input:checked ~ .item__content {
-    max-height: 25rem;
+    max-height: 250px;
 }
 
-.item__input:checked ~ .item__label > .item__icon {
-    transform: rotateZ(270deg);
-    color: #1a94ea;
+.item__input:checked ~ .item__info > .item__heading {
+    color: #000000;
 }
 
-.item__input:checked ~ .item__label > .item__heading {
-    color: #1a94ea;
+.item__input:checked ~ .item__info > .item__icon {
+    transform: rotateZ(180deg);
 }
 
-.item__label:hover ~ .item__content, .item__content:hover{
-    max-height: 25rem;
+/* HOVER ACCORDION */
+.accordion:hover .item__info > .item__heading {
+    color: #000000;
 }
 
-/*.item__label:hover > .item__icon {*/
-/*    transform: rotateZ(270deg);*/
-/*}*/
+.accordion:hover .item__info > .item__icon {
+    opacity: 1;
+}
+
+/* HOVER ITEMS */
+.item__label:hover > .item__content {
+    max-height: 250px;
+}
+
+.item__label:hover > .item__info > .item__icon {
+    transform: rotateZ(180deg);
+}
