--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -57,6 +57,7 @@ h1 {
     display: flex;
     flex-direction: column;
     cursor: pointer;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .item__info {
@@ -77,8 +78,8 @@ h1 {
 
 .item__icon {
     opacity: 0;
-    width: 15px;
-    height: 15px;
+    width: 1.5rem;
+    height: 1.5rem;
     transition: all .4s linear;
 }
 
@@ -96,12 +97,14 @@ h1 {
 
 .item__content > img {
     display: block;
+    width: 45rem;
+    aspect-ratio: 1/1;
     margin-bottom: 5rem;
 }
 
 /* CHECKED */
 .item__input:checked ~ .item__content {
-    max-height: 250px;
+    max-height: 50rem;
 }
 
 .item__input:checked ~ .item__info > .item__heading {
@@ -123,9 +126,21 @@ h1 {
 
 /* HOVER ITEMS */
 .item__label:hover > .item__content {
-    max-height: 250px;
+    max-height: 50rem;
 }
 
 .item__label:hover > .item__info > .item__icon {
     transform: rotateZ(180deg);
+}
+
+@media (max-width: 820px) {
+    :root {
+        font-size: 7px;
+    }
+}
+
+@media (max-width: 500px) {
+    :root {
+        font-size: 5px;
+    }
 }
