--- a/cssBayan/styles.css
+++ b/cssBayan/styles.css
@@ -46,11 +46,11 @@ h1 {
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-width: 250px;
+    min-width: 25rem;
     background-color: var(--item-bg-color);
     list-style: none;
-    border-radius: 5px;
-    box-shadow: 3px 3px 5px 0 rgba(0,0,0, .2), -3px -3px 5px 1px rgba(255, 255, 255, .2);
+    border-radius: .5rem;
+    box-shadow: .3rem .3rem .5rem 0 rgba(0,0,0, .2), -.3rem -.3rem .5rem .1rem rgba(255, 255, 255, .2);
 }
 
 .item__label {
@@ -124,18 +124,28 @@ h1 {
     opacity: 1;
 }
 
-/* HOVER ITEMS */
-.item__label:hover > .item__content {
-    max-height: 50rem;
-}
+@media (min-width: 820px) {
+    /* HOVER ITEMS */
+    .item__label:hover > .item__content {
+        max-height: 50rem;
+    }
 
-.item__label:hover > .item__info > .item__icon {
-    transform: rotateZ(180deg);
+    .item__label:hover > .item__info > .item__icon {
+        transform: rotateZ(180deg);
+    }
 }
 
 @media (max-width: 820px) {
     :root {
         font-size: 7px;
+    }
+
+    .item__heading {
+        color: #000000;
+    }
+
+    .item__icon {
+        opacity: 1;
     }
 }
 
